cholera 0.6.5.9009
==================

- add parallel Windows version of split.outcome object.


cholera 0.6.5.9008
==================

- amend expectedCount() for summary.walking().


cholera 0.6.5.9007
==================

- amend observedExpected().
- add parallel Windows version of observedExpected().


cholera 0.6.5.9006
==================

- add travelingSalesman() parLapply() prototype.
- add parallel Windows version of neighborhoodEuclidean().
- add parallel Windows version of neighborhoodWalking().


cholera 0.6.5.9005
==================

- add peripheryCases() parLapply() prototype.


cholera 0.6.5.9004
==================

- add unstackAuxiliaryFunctions.R
- add parallel Windows implementation for unstackFatalities().


cholera 0.6.5.9003
==================

- add dev.mode argument to unstackFatalities().
- add parLapply() flavored unstackFatalities() prototype.


cholera 0.6.5.9002
==================

- use parallel::clusterExport(envir = environment()).
- test parLapply() in unstackFatalities().


cholera 0.6.5.9001
==================

- add parLapply() prototype.


cholera 0.6.5.9000
==================

- re-add isoLines() and isoVertices() prototypes.
- deprecate parallel implementation of euclideanPath().


cholera 0.6.5
==================

# Fixes #

- fix plot.walking_path() timeposts.
- fix plot.walking_path(observed = FALSE).
- fix St James Workhouse for walkingPath(type = "cases").
- fix St James Workhouse for euclideanPath(type = "cases").
- fix city squares for plot.euclidean_path().
- fix computed time in nearestPump() and amend sim.walking.distance.

# New Data #

- add sim.walking.distance.

# Function Changes #

- add nearestPump(metric = "euclidean").
- add distance.unit argument to addWhitehead().
- add pch and point.size arguments to addNeighborhoodCases().
- add pos argument to addCase().
- add output argument to voronoiPolygons().
- add summary.euclidean(), summary.voronoi() and summary.walking().