@@ -5,7 +5,7 @@
 \title{Generate simulated fatalities.}
 \usage{
 simulateFatalities(compute = FALSE, multi.core = FALSE,
-  simulated.obs = 20000L)
+  simulated.obs = 20000L, dev.mode = FALSE)
 }
 \arguments{
 \item{compute}{Logical. \code{TRUE} computes data. \code{FALSE} uses pre-computed data. For replication of data used in the package,}
@@ -13,6 +13,8 @@ simulateFatalities(compute = FALSE, multi.core = FALSE,
 \item{multi.core}{Logical or Numeric. \code{TRUE} uses \code{parallel::detectCores()}. \code{FALSE} uses one, single core. With Numeric, you specify the number logical cores (rounds with \code{as.integer()}). On Windows, only \code{multi.core = FALSE} is available.}
 
 \item{simulated.obs}{Numeric. Number of sample cases.}
+
+\item{dev.mode}{Logical. Development mode uses parallel::parLapply().}
 }
 \value{
 An R list with two elements: \code{\link{sim.ortho.proj}} and \code{\link{regular.cases}}
